# gpt-summarizer

./: .gitignore  README.gpu.md  README.md  api_key_chatgpt_example.py  config.py  download-llama-2-13B-model.sh  extractor.py  format.sh  go.sh  lint.sh  main_cli.py  prompts.py  pyproject.toml  service_api_key.py  summarizer.py  test-chunks.sh  test-download.sh  test-input-dir.sh  test-larger.sh  test-one-file-and-output-dir.sh  test-output-dir.sh  test-pdf.sh  test.e2e.sh  test.sh  util_chat.py  util_config.py  util_cost_estimator.py  util_file.py  util_file_ext.py  util_pdf.py  util_wait.py
data/: LLM-context-paper.txt  input.txt
data/small_input/: HowtoDoGreatWork.truncated.html  paul_graham_essay.truncated.txt
example_output/: downloaded--README.2024_05_24__150934.yaml.txt
gpt-summarizer/: config.py  extractor.py  main_cli.py  prompts.py  service_api_key.py  summarizer.py  util_chat.py  util_config.py  util_cost_estimator.py
gpt_summarizer/: chunker.py  config.py  extractor.py  llm_caller.py  llm_response_helper.py  main_cli.py  output_file.py  output_print.py  prompts.py  service_api_key.py  summarizer.py  util_chat.py  util_config.py  util_cost_estimator.py  util_version.py
